--- a/style.css
+++ b/style.css
@@ -445,11 +445,36 @@ body {
     
 }
 @media (max-width:600px) {
-    .centernav{
-        display: none;
+    
+    .navbar>img{
+        margin-left: -20px;
+        height: 50px;
+        width: 100px;
+    }
+    .centernav {
+        margin-left: -50px;
+        display: flex;
+        gap: 25px;
+        line-height: 1.7;
+    }
+    .centernav a{
+        font-size: 15px;
+    }
+    .navbar #sbtn{
+        margin-right: 30px;
+        height: 30px;
+        width: 80px;
+
+        
     }
     
 }
+
+
+
+
+
+
 
 
 
