--- a/style.css
+++ b/style.css
@@ -38,17 +38,16 @@ body {
     /* background-color: rebeccapurple; */
 }
 
+
 .centernav {
     display: flex;
     gap: 55px;
     border-bottom: 1px solid black;
     line-height: 3;
     
-    
-
-
-
 }
+
+
 
 .centernav a {
     color: black;
@@ -109,7 +108,8 @@ body {
 }
 .text h1{
     font-family: 'Poppins', sans-serif;
-    font-size: 65px;
+    font-size: 4em;
+    /* font-size: 2.3em; */
     line-height: 1.1;
 }
 .text h4{
@@ -444,37 +444,63 @@ body {
 
     
 }
-@media (max-width:600px) {
+@media (max-width:500px) {
     
     .navbar>img{
-        margin-left: -20px;
-        height: 50px;
-        width: 100px;
+        margin-left: -15px;
+        height: 40px;
+        width: 25vw;
     }
     .centernav {
-        margin-left: -50px;
-        display: flex;
-        gap: 25px;
-        line-height: 1.7;
+       margin-right: 50px;
+        gap: 17px;
+        line-height: 2;
     }
     .centernav a{
-        font-size: 15px;
+        font-size: 1em;
     }
     .navbar #sbtn{
-        margin-right: 30px;
-        height: 30px;
-        width: 80px;
+        display: none;
 
+    }
+    .text>h1{
+        font-size: 3em;
+        margin-left: -1.6%;
+    }
+    .text>h3{
+    transform: rotate(-20deg);
+    position: absolute;
+    top: -1.5%;
+    left: -1%;
+    color: gray;
+
+    }
+    .page1>img {
+        position: absolute;
+        top: 38%;
+        right: 3%;
+        width: 38%;
         
     }
-    
+    .text h4{
+        font-size: 1em;
+        width: 400%;
+        color: gray;
+        margin-top: 20px;
+        /* background-color: rebeccapurple; */
+    }
+    .button #btn1{
+        padding: 15px 25px;
+        border: none;
+        border-radius: 10px;
+        background-color: rgb(126, 157, 250);
+        font-family: 'Poppins', sans-serif;
+        font-weight: 800;
+        margin-left: -12%;
+        
+    }
+  
 }
-
-
-
-
-
-
 
 
 
